<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ping</string>
    <string name="default_negative_btn_label">取消</string>
    <string name="default_positive_btn_label">确定</string>
    <string name="dialog_no_promp">不再提示</string>
    <string name="speed_adjust">测速</string>
    <string name="respeed_adjust">重新测速</string>
    <string name="wifi_show">wifi</string>
    <string name="mobile_show">mobile</string>
    <string name="traffic_no_permissions">缺少必要权限无法加载</string>
    <string name="traffic_single_go_to_setting">前往设置</string>
    <string name="traffic_single_package_usage_stats_title">查看数据使用量</string>
    <string name="traffic_single_package_usage_stats_message">正在申请查看数据使用量权限，您是否同意</string>
    <string name="traffic_single_allow">允许</string>
    <string name="traffic_single_deny">禁止</string>
    <string name="activity_detect_name">JJ加速器</string>
    <string name="activity_detect_check_run">检测本机运行环境</string>
    <string name="activity_detect_clear_background_app">清理后台应用释放内存</string>
    <string name="activity_detect_network_app">占用网速应用 (%s个)</string>
    <string name="activity_detect_stop">停止</string>
    <string name="shutdown">关闭</string>
    <string name="ignore">忽略优化,直接启动</string>
    <string name="detail">详细描述</string>
    <string name="advise">请简要描述您的问题和意见</string>
    <string name="contact">请留下您的联系方式</string>
    <string name="contactinfo">手机/邮箱/QQ/微信</string>
    <string name="submit">提交</string>
    <string name="down_speed">下载速度</string>
    <string name="delay">实施延迟</string>
    <string name="lost">丢包率</string>
    <string name="jj_game">JJ游戏大厅</string>
    <string name="start_accelerate">开启加速</string>
    <string name="jj_accelera">JJ加速器</string>
    <string name="version">当前版本:1.0.0</string>
    <string name="acce_begain">加速后启动游戏</string>
    <string name="win_float">网速悬浮窗</string>
    <string name="site">官方网站</string>
    <string name="problem">常见问题</string>
    <string name="feedback">用户反馈</string>
    <string name="about">关于我们</string>
    <string name="jj_time">JJ比赛加速时长</string>
    <string name="stop_acce">停止加速</string>
    <string name="no_game">未检测到对应游戏，请前往下载</string>
    <string name="ok">确认</string>
    <string name="cancle">取消</string>
    <string name="net">检测当前网络环境</string>
    <string name="net_erro">WIFI信号较差建议使用流量</string>
    <string name="run">检测本机运行环境</string>
    <string name="smart">智能匹配加速节点</string>
    <string name="smart_pre">预计降低延迟53%</string>
    <string name="finish">加速完成</string>
    <string name="run_clean">清理后台应用释放内存</string>
    <string name="erro">网络异常常见原因：</string>
    <string name="erro1">1、手机无法访问外网:</string>
    <string name="erro2">&#160;&#160;&#160;&#160;&#160;&#160;a、检查数据或WIFI是否打开\n\n&#160;&#160;&#160;&#160;&#160;&#160;b、检查飞行模式是否关闭\n\n&#160;&#160;&#160;&#160;&#160;&#160;c、检查手机是否欠费，流量是否有剩余\n\n&#160;&#160;&#160;&#160;&#160;&#160;d、检查WIFI是否可以连接外网</string>
    <string name="erro3">2、手机网络正常仍无法开启加速</string>
    <string name="erro4">&#160;&#160;&#160;&#160;&#160;&#160;a、检查是否赋予加速器网络访问权限</string>
</resources>
