<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/white">
    <com.jj.game.boost.customview.TitleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="vertical"
        android:paddingLeft="20dip">
      <TextView
        android:id="@+id/erro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/erro"
          android:textColor="@color/text_black"
         android:textSize="14sp" />
        <TextView
            android:id="@+id/erro1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/erro1"
            android:textSize="14sp"
            android:textColor="@color/text_black"/>
        <TextView
            android:id="@+id/erro2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/erro2"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/erro3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/erro3"
            android:textSize="14sp"
            android:textColor="@color/text_black"/>
        <TextView
            android:id="@+id/erro4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/erro4"
            android:textSize="14sp" />
</com.zhy.android.percent.support.PercentLinearLayout>
</com.zhy.android.percent.support.PercentLinearLayout>
