<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="#f7f7f7">
    <com.jj.game.boost.customview.TitleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical"
        android:gravity="center">
        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical"
            android:background="#ffffff"
            android:paddingBottom="26.7dip">
            <ImageView
                android:id="@+id/img_jj"
                android:layout_width="45.3dip"
                android:layout_height="45.3dip"
                android:layout_weight="0"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/bees9"/>
            <TextView
                android:id="@+id/label_jj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_gravity="center_horizontal"
                android:textColor="#333333"
                android:textSize="14sp"
                android:text="@string/jj_accelera"/>
            <TextView
                android:id="@+id/version_jj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_gravity="center_horizontal"
                android:textColor="#333333"
                android:textSize="10.7sp"
                android:text="@string/version"/>
        </com.zhy.android.percent.support.PercentLinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#e2e2e2"
            android:layout_marginTop="13.3dip"/>
        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:orientation="vertical"
            android:background="#ffffff">
            <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_weight="0"
                android:orientation="horizontal"
                android:background="#ffffff">
            <TextView
                android:id="@+id/lable_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/acce_begain"
                android:paddingLeft="10dip"
                android:textColor="#333333"
                android:textSize="14sp"/>
                <Switch
                    android:id="@+id/start_swtich"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:layout_marginLeftPercent="55%sw"/>
            </com.zhy.android.percent.support.PercentLinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#e2e2e2"/>
            <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_weight="0"
                android:orientation="horizontal"
                android:background="#ffffff">
                <TextView
                    android:id="@+id/lable_float"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/win_float"
                    android:paddingLeft="10dip"
                    android:textColor="#333333"
                    android:textSize="14sp"/>
                <Switch
                    android:id="@+id/float_swtich"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:layout_marginLeftPercent="63%sw"/>
            </com.zhy.android.percent.support.PercentLinearLayout>
        </com.zhy.android.percent.support.PercentLinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#e2e2e2"/>
        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:orientation="vertical"
            android:layout_marginTop="13.3dip"
            android:background="#ffffff">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#e2e2e2"/>
            <com.zhy.android.percent.support.PercentLinearLayout
                android:id="@+id/site_layout"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_weight="0"
                android:orientation="horizontal"
                android:background="#ffffff">
            <TextView
                android:id="@+id/lable_site"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_gravity="center_vertical"
                android:text="@string/site"
                android:paddingLeft="10dip"
                android:textColor="#333333"
                android:textSize="14sp"/>
                <ImageView
                    android:id="@+id/img_site"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/arry_right"
                    app:layout_marginLeftPercent="73%sw" />
            </com.zhy.android.percent.support.PercentLinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#e2e2e2"/>
            <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_weight="0"
                android:orientation="horizontal"
                android:background="#ffffff">
            <TextView
                android:id="@+id/problem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_gravity="center_vertical"
                android:text="@string/problem"
                android:paddingLeft="10dip"
                android:textColor="#333333"
                android:textSize="14sp"/>
                <ImageView
                    android:id="@+id/img_problem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/arry_right"
                    app:layout_marginLeftPercent="73%sw" />
            </com.zhy.android.percent.support.PercentLinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#e2e2e2"/>
            <com.zhy.android.percent.support.PercentLinearLayout
                android:id="@+id/feedback_layout"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_weight="0"
                android:orientation="horizontal"
                android:background="#ffffff">
            <TextView
                android:id="@+id/feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_gravity="center_vertical"
                android:text="@string/feedback"
                android:paddingLeft="10dip"
                android:textColor="#333333"
                android:textSize="14sp"/>
                <ImageView
                    android:id="@+id/img_feedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/arry_right"
                    app:layout_marginLeftPercent="73%sw" />
        </com.zhy.android.percent.support.PercentLinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#e2e2e2"/>
        </com.zhy.android.percent.support.PercentLinearLayout>
    </com.zhy.android.percent.support.PercentLinearLayout>
</com.zhy.android.percent.support.PercentLinearLayout>
