<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/title_bg">
    <com.jj.game.boost.customview.TitleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:gravity="center">
        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lable_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_gravity="center_horizontal"
                android:text="@string/down_speed"
                android:textColor="#ffffff"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffffff"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/unit_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffffff"
                android:textSize="14sp"/>
        </com.zhy.android.percent.support.PercentLinearLayout>
        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:orientation="vertical"
            android:paddingLeft="40dip">
            <TextView
                android:id="@+id/lable_delay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_gravity="center_horizontal"
                android:text="@string/delay"
                android:textColor="#ffffff"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/delay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_gravity="center_horizontal"
                android:text="--"
                android:textColor="#ffffff"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/unit_delay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_gravity="center_horizontal"
                android:text="ms"
                android:textColor="#ffffff"
                android:textSize="14sp"/>
        </com.zhy.android.percent.support.PercentLinearLayout>
        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:orientation="vertical"
            android:paddingLeft="40dip">
            <TextView
                android:id="@+id/lable_lose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_gravity="center_horizontal"
                android:text="@string/lost"
                android:textColor="#ffffff"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/lose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_gravity="center_horizontal"
                android:text="--"
                android:textColor="#ffffff"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/unit_lose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_gravity="center_horizontal"
                android:text="%"
                android:textColor="#ffffff"
                android:textSize="14sp"
                />
        </com.zhy.android.percent.support.PercentLinearLayout>
    </com.zhy.android.percent.support.PercentLinearLayout>
    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
    <ImageView
        android:id="@+id/img"
        android:layout_width="200dip"
        android:layout_height="200dip"
        android:layout_weight="0"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bees5"
        android:layout_marginTop="63.3dip"/>
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="33.3dip"
        android:text="@string/jj_game"
        android:textColor="#ffffff"
        android:textSize="16sp"/>
     <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dip"
        android:text="00:00:00"
         android:textColor="#ffffff"
         android:textSize="16sp"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/start_accelerate"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:layout_marginTop="57.7dip"/>
</com.zhy.android.percent.support.PercentLinearLayout>
</com.zhy.android.percent.support.PercentLinearLayout>
